--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-query": "^3.39.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
@@ -60,5 +61,4 @@
   "devDependencies": {
     "@types/react-transition-group": "^4.4.6"
   }
-  
 }
