--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,9 +20,11 @@
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "apexcharts": "^3.41.0",
     "axios": "^1.4.0",
     "fontawesome": "^5.6.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-query": "^3.39.3",
